Add some text to the proyect

--- a/index.html
+++ b/index.html
@@ -25,7 +25,13 @@
         </nav>
     </header>
     <section class="body__text">
-        <p>
+        <p class="text_1">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis, ipsa explicabo quasi dolorem autem animi nesciunt ullam, ratione aspernatur, recusandae praesentium exercitationem error. Totam voluptatem modi odio dolore facere aspernatur!
+            Distinctio similique reiciendis, tenetur facilis maiores repudiandae, ex perferendis placeat inventore itaque vel! Sunt corrupti quaerat, enim exercitationem, laboriosam a ex ducimus reprehenderit quae quia cum quisquam cupiditate laborum! Perspiciatis.
+            Hic nam beatae culpa, impedit magni doloribus? Et quod id quas repellendus iusto fugiat repudiandae, totam rerum qui voluptatum saepe, temporibus a cupiditate incidunt corporis ut rem ducimus ipsam obcaecati?
+            Porro voluptates vero, error eos unde praesentium quo commodi esse odio iusto ullam dolorum perferendis non ipsa aspernatur! Reprehenderit consequatur et provident quisquam quos. Hic qui rem iste minima error.
+        </p>
+        <p class="text_2">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis, ipsa explicabo quasi dolorem autem animi nesciunt ullam, ratione aspernatur, recusandae praesentium exercitationem error. Totam voluptatem modi odio dolore facere aspernatur!
             Distinctio similique reiciendis, tenetur facilis maiores repudiandae, ex perferendis placeat inventore itaque vel! Sunt corrupti quaerat, enim exercitationem, laboriosam a ex ducimus reprehenderit quae quia cum quisquam cupiditate laborum! Perspiciatis.
             Hic nam beatae culpa, impedit magni doloribus? Et quod id quas repellendus iusto fugiat repudiandae, totam rerum qui voluptatum saepe, temporibus a cupiditate incidunt corporis ut rem ducimus ipsam obcaecati?
